--- a/jenkins-test-project/Dockerfile
+++ b/jenkins-test-project/Dockerfile
@@ -6,6 +6,20 @@ COPY . .
 RUN npm run build
 
 FROM nginx:alpine
+
+# Copy built React app
 COPY --from=build /app/build /usr/share/nginx/html
+
+# Configure nginx to serve on port 3000 (to match docker-compose mapping)
+RUN echo 'server { \
+    listen 3000; \
+    server_name localhost; \
+    location / { \
+        root /usr/share/nginx/html; \
+        index index.html index.htm; \
+        try_files $uri $uri/ /index.html; \
+    } \
+}' > /etc/nginx/conf.d/default.conf
+
 EXPOSE 3000
 CMD ["nginx", "-g", "daemon off;"]
